# swagger.json
@@ -11,7 +11,7 @@
   "tags": [
     {
       "name": "comic",
-      "description": "Everything about your comics"
+      "description": "Operations about user"
     },
     {
       "name": "user",
@@ -23,13 +23,169 @@
     "http"
   ],
   "paths": {
+    "/comic": {
+      "post": {
+        "tags": [
+          "comic"
+        ],
+        "summary": "Create comic",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "createComic",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created comic object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Comic"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "comic"
+        ],
+        "summary": "Get all comics",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created comic object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Comic"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/comic/{id}": {
+      "get": {
+        "tags": [
+          "comic"
+        ],
+        "summary": "Get comic by id",
+        "description": "",
+        "operationId": "getComicById",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id that needs to be fetched.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Comic"
+            }
+          },
+          "404": {
+            "description": "Comic not found"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "comic"
+        ],
+        "summary": "Update comic by id",
+        "description": "",
+        "operationId": "updateComicById",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id that needs to be fetched.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Comic"
+            }
+          },
+          "404": {
+            "description": "Comic not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "comic"
+        ],
+        "summary": "Delete comic by id",
+        "description": "",
+        "operationId": "deleteComicById",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id that needs to be fetched.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Comic"
+            }
+          },
+          "404": {
+            "description": "Comic not found"
+          }
+        }
+      }
+    },
     "/user": {
       "post": {
         "tags": [
           "user"
         ],
         "summary": "Create user",
-        "description": "",
+        "description": "This can only be done by the logged in user.",
         "operationId": "createUser",
         "produces": [
           "application/xml",
@@ -39,7 +195,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Created user",
+            "description": "Created user object",
             "required": true,
             "schema": {
               "$ref": "#/definitions/User"
@@ -57,7 +213,7 @@
           "user"
         ],
         "summary": "Get all users",
-        "description": "",
+        "description": "This can only be done by the logged in user.",
         "operationId": "",
         "produces": [
           "application/xml",
@@ -67,7 +223,8 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Get user object",
+            "description": "Created user object",
+            "required": true,
             "schema": {
               "$ref": "#/definitions/User"
             }
@@ -327,6 +484,12 @@
               "3"
             ]
           }
+        },
+        "image": {
+          "type": "string"
+        },
+        "comicLink": {
+          "type": "string"
         }
       },
       "xml": {
